welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:49: error: not found: value setYPos
	setYPos(0,6);
        ^